fix for tv seasons on mobile screen v2

--- a/src/components/seasons-card/seasons-card.styles.scss
+++ b/src/components/seasons-card/seasons-card.styles.scss
@@ -7,6 +7,10 @@
   width: 100%;
   height: 100%;
 
+  @media screen and (max-width: 768px) {
+    margin-bottom: .5rem;
+  }
+
   .season-card {
     display: grid;
     grid-template-columns: 0.11fr 1fr;
@@ -19,7 +23,7 @@
     @media screen and (max-width: 768px) {
       grid-template-columns: 0.25fr 1fr;
       grid-gap: 0.7rem;
-      padding: 0.5rem 0;
+      padding: 0.3rem 0;
     }
 
     .image-container {
