--- a/src/components/tv-seasons/tv-seasons.styles.scss
+++ b/src/components/tv-seasons/tv-seasons.styles.scss
@@ -10,9 +10,10 @@
     padding: 0 0 0 2.5rem;
 
     @media screen and (max-width: 768px) {
-      display: grid;
+      display: flex;
+      flex-direction: column;
       grid-template-columns: 1fr;
-      gap: 1rem;
+    //   gap: 1rem;
       padding: 0 0.5rem;
     }
   }
